--- a/app/src/main/res/drawable/edit_text_background_selected.xml
+++ b/app/src/main/res/drawable/edit_text_background_selected.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="#eeeeee" />
+    <solid
+        android:color="#eeeeee"
+
+        />
 
 <!--    <stroke-->
 <!--        android:width="3dp"-->
