--- a/app/src/main/res/layout/activity_case_detail.xml
+++ b/app/src/main/res/layout/activity_case_detail.xml
@@ -16,6 +16,7 @@
             android:id="@+id/cv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:cardCornerRadius="20dp"
             android:layout_margin="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -36,6 +37,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_input"
             android:layout_width="match_parent"
+            app:cardCornerRadius="20dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             app:layout_constraintTop_toBottomOf="@id/cv_title">
