--- a/app/src/main/res/layout/activity_edit_case.xml
+++ b/app/src/main/res/layout/activity_edit_case.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.EditCaseActivity">
 
     <LinearLayout
@@ -12,6 +13,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:cardCornerRadius="20dp"
             android:layout_margin="10dp">
 
             <TextView
@@ -19,7 +21,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:textSize="24sp"
+                android:textSize="21sp"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
                 android:textColor="@color/colorAccent"
