--- a/app/src/main/res/layout/activity_input_case.xml
+++ b/app/src/main/res/layout/activity_input_case.xml
@@ -14,6 +14,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:cardCornerRadius="20dp"
             android:layout_margin="10dp">
 
             <TextView
@@ -21,7 +22,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:textSize="24sp"
+                android:textSize="21sp"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
                 android:textColor="@color/colorAccent"
