--- a/app/src/main/res/layout/activity_manage_member.xml
+++ b/app/src/main/res/layout/activity_manage_member.xml
@@ -12,6 +12,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:cardCornerRadius="20dp"
         android:layout_margin="10dp">
 
         <TextView
