--- a/app/src/main/res/layout/item_case.xml
+++ b/app/src/main/res/layout/item_case.xml
@@ -47,12 +47,13 @@
             android:paddingBottom="3dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:text="Tindak Pidana"
             android:textColor="@color/white"
             android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/tv_nama_pelapor"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_nama_pelapor" />
+            app:layout_constraintBottom_toBottomOf="@id/iv_pidana_icon"/>
 
         <TextView
             android:id="@+id/tv_lokasi_kejadian"
@@ -63,7 +64,7 @@
             android:padding="10dp"
             android:text="Alamat lokasi kejadian disini dalam bentuk alamat tertulis ada disini"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_pidana_icon" />
+            app:layout_constraintTop_toBottomOf="@id/tv_tindak_pidana" />
 
         <TextView
             android:id="@+id/tv_petugas"
@@ -93,7 +94,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:backgroundTint="@color/white"
-            android:text="delete"
+            android:text="Hapus"
             android:textColor="@color/colorAccent"
             app:layout_constraintStart_toEndOf="@id/bt_edit_case"
             app:layout_constraintTop_toTopOf="@id/bt_edit_case" />
