--- a/app/src/main/res/layout/activity_input_note.xml
+++ b/app/src/main/res/layout/activity_input_note.xml
@@ -36,12 +36,13 @@
 
         <ProgressBar
             android:id="@+id/progress_upload"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/cv_title"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:indeterminate="true"
-            android:visibility="invisible"/>
+            android:visibility="invisible"
+            app:layout_constraintTop_toBottomOf="@id/cv_title" />
+
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="200dp"
@@ -72,7 +73,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
             android:layout_marginBottom="20dp"
-            android:backgroundTint="@color/white"
             app:cardCornerRadius="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cv_title"
@@ -85,8 +85,10 @@
                 android:orientation="vertical">
 
                 <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    app:boxStrokeColor="@color/stroke_color">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/et_body_note"
@@ -298,19 +300,20 @@
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </LinearLayout>
+
                 <Button
-                    android:layout_marginTop="16dp"
                     android:id="@+id/bt_add_note"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    android:paddingStart="30dp"
-                    android:paddingEnd="30dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="16dp"
                     android:layout_weight="1"
                     android:backgroundTint="@color/colorAccent"
+                    android:paddingStart="30dp"
+                    android:paddingTop="10dp"
+                    android:paddingEnd="30dp"
+                    android:paddingBottom="10dp"
                     android:text="Tambah Catatan"
-                    android:layout_gravity="center_horizontal"
                     android:textColor="@color/white" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
