adding more user friendly upload process, change case note item size

--- a/app/src/main/res/layout/activity_input_note.xml
+++ b/app/src/main/res/layout/activity_input_note.xml
@@ -43,6 +43,19 @@
             android:visibility="invisible"
             app:layout_constraintTop_toBottomOf="@id/cv_title" />
 
+        <TextView
+            android:id="@+id/tv_process"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:text="Petugas: Anonim"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/cv_title"
+            app:layout_constraintBottom_toTopOf="@id/progress_upload"/>
+
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="200dp"
@@ -69,6 +82,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cv_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
@@ -317,6 +331,7 @@
                     android:textColor="@color/white" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
