--- a/app/src/main/res/drawable/edit_text_background_selected.xml
+++ b/app/src/main/res/drawable/edit_text_background_selected.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <solid
-        android:color="#eeeeee"
+        android:color="#e1e1e1e1"
 
         />
 
