--- a/app/src/main/res/layout/case_form_layout.xml
+++ b/app/src/main/res/layout/case_form_layout.xml
@@ -200,7 +200,7 @@
 
                     <Spinner
                         android:id="@+id/operator_spinner"
-                        style="@android:style/Widget.Holo.Light.Spinner"
+                        style="@android:style/Widget.Material.Spinner.Underlined"
                         android:layout_width="150dp"
                         android:layout_height="match_parent" />
 
@@ -225,7 +225,7 @@
 
                 <Spinner
                     android:id="@+id/pidana_spinner"
-                    style="@android:style/Widget.Holo.Light.Spinner"
+                    style="@android:style/Widget.Material.Spinner.Underlined"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_marginTop="10dp" />
