--- a/app/src/main/res/layout/item_case_note.xml
+++ b/app/src/main/res/layout/item_case_note.xml
@@ -3,13 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:strokeWidth="1dp"
-    app:strokeColor="@color/colorAccent"
+    android:backgroundTint="#eeeeee"
     android:layout_marginStart="10dp"
     android:layout_marginTop="5dp"
     android:layout_marginEnd="10dp"
     app:cardCornerRadius="20dp"
-
     android:layout_marginBottom="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,6 +25,19 @@
             android:textSize="10sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_nama_petugas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Petugas : Anonim"
+            android:textAllCaps="true"
+            android:textColor="@color/colorPrimary"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            android:layout_marginTop="5dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ll_iv_group_2" />
 
         <TextView
             android:id="@+id/tv_judul_catatan"
@@ -52,6 +63,7 @@
 
             <TextView
                 android:id="@+id/tv_body_catatan"
+                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Alamat lokasi kejadian disini dalam bentuk alamat tertulis ada disini" />
