--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/cv_parent"
     android:background="@color/colorAccent"
     tools:context=".ui.HomeActivity">
 
@@ -19,12 +20,12 @@
         android:id="@+id/cv_background"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        app:layout_constraintVertical_bias="1.1"
+        app:layout_constraintVertical_bias="0.9"
         android:layout_marginTop="100dp"
         android:background="@color/white"
         app:cardCornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/cv_anggota" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_interactive_newest"
@@ -158,7 +159,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_anggota"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
@@ -188,11 +189,8 @@
 
     <Button
         android:id="@+id/bt_input"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="10dp"
         android:background="#00ffffff"
         android:elevation="0dp"
         android:paddingLeft="48dp"
